Edited cursor image to make smaller; added timer; added repeating butterflies; added bones of high score function and div. Fixed: no longer need to push start to generate new random butterfly, clicking on whole div no longer registers as correct, changed semantics of class name controlling butterfly visibility.

--- a/public/css/whackamole.css
+++ b/public/css/whackamole.css
@@ -15,13 +15,16 @@ body {
     width: 50%;
 }
 
-.high-score {
+.high-score, .end {
     display: inline-block;
     width: 50%;
+    font-size: 2em;
+    text-align: right;
 }
 
-.text {
-    font-size: 2em
+.score {
+    font-size: 2em;
+    width: 50%;
 }
 
 .cage {
@@ -39,8 +42,9 @@ button {
     color: #2d2518;
     border: 1px solid #2d2518;
     margin-top: 50px;
+    font-size: 2em;
 }
 
-.make-visible img {
+.invisible img {
     opacity: 0;
 }
